@@ -120,13 +120,6 @@ my $type = Type::Tiny->new(
 The method should return a hash of values that are passed to the
 `add_column` method of [DBIx::Class::ResultSource](https://metacpan.org/pod/DBIx%3A%3AClass%3A%3AResultSource).
 
-# ROADMAP
-
-Support for Perl versions earlier than 5.10 will be removed sometime
-in 2019.
-
-# SEE ALSO
-
 [Type::Tiny](https://metacpan.org/pod/Type%3A%3ATiny).
 
 [Types::SQL::Util](https://metacpan.org/pod/Types%3A%3ASQL%3A%3AUtil), which provides a utility function for translating
