@@ -9,7 +9,7 @@ requires "Type::Library" => "0";
 requires "Type::Utils" => "0.44";
 requires "Types::Standard" => "0";
 requires "namespace::autoclean" => "0";
-requires "perl" => "v5.8.0";
+requires "perl" => "v5.10.0";
 requires "version" => "0.77";
 recommends "PerlX::Maybe::XS" => "0";
 recommends "Ref::Util::XS" => "0";
